...
    <string name="playground_input_info">
        Anything you type here will be sent to the standard input (System.in), in the order it appears here. There is currently no way
        to enter command line arguments.
    </string>
    <string name="playground_input_hint">Enter input here…</string>
    <string name="playground_input_delete">Delete all input</string>
    <string name="playground_input_deleted">All input deleted!</string>
    <string name="playground_stdout_info">Everything your program writes to the standard output (System.out) appears here.</string>
    <string name="playground_stdout_hint">Nothing on System.out</string>
    <string name="playground_stderr_info">Everything your program writes to the standard error channel (System.err) appears here, including exceptions.</string>
    <string name="playground_stderr_hint">Nothing on System.err</string>
    <string name="playground_exit_code_info">Exit code information. An exit code of 0 means success, all other values indicate some error.</string>
    <string name="playground_exit_code_hint">No exit code.</string>
...
