<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".playground.OutputFragment"
    android:id="@+id/fragment_output_root">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/poweredByTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold"
            tools:text="Powered by: Glot.io"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playground_stdout_info"
            android:textSize="@dimen/small_text_size"
            android:layout_margin="@dimen/margin"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:background="@drawable/code_component_background">

            <HorizontalScrollView
                android:id="@+id/playgroundStdoutScroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:fillViewport="true">

                <TextView
                    android:id="@+id/playgroundStdout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/playground_stdout_hint"
                    android:textSize="@dimen/small_text_size"
                    android:textColor="@color/code_text_color"
                    android:textColorHint="@color/code_text_color"
                    android:background="@drawable/code_area_background"
                    android:padding="@dimen/padding" />

            </HorizontalScrollView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin"
                android:layout_below="@id/playgroundStdoutScroll">

                <ImageButton
                    android:id="@+id/stdoutZoomIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="?selectableItemBackground"
                    app:srcCompat="@drawable/zoom_in_icon"
                    android:contentDescription="@string/zoom_in"
                    android:layout_marginEnd="@dimen/margin"/>

                <ImageButton
                    android:id="@+id/stdoutZoomOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="?selectableItemBackground"
                    app:srcCompat="@drawable/zoom_out_icon"
                    android:contentDescription="@string/zoom_out" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playground_stderr_info"
            android:textSize="@dimen/small_text_size"
            android:layout_margin="@dimen/margin"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:background="@drawable/advanced_area_background">

            <HorizontalScrollView
                android:id="@+id/playgroundStderrScroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:fillViewport="true">

                <TextView
                    android:id="@+id/playgroundStderr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/playground_stderr_hint"
                    android:textSize="@dimen/small_text_size"
                    android:textColor="@android:color/holo_red_light"
                    android:textColorHint="@android:color/holo_red_light"
                    android:background="@android:color/black"
                    android:padding="@dimen/padding" />

            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin"
                android:layout_below="@id/playgroundStderrScroll">

                <ImageButton
                    android:id="@+id/stderrZoomIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="?selectableItemBackground"
                    app:srcCompat="@drawable/zoom_in_icon"
                    android:contentDescription="@string/zoom_in"
                    android:layout_marginEnd="@dimen/margin"
                    app:tint="@android:color/black"
                    app:backgroundTint="@android:color/holo_red_light"/>

                <ImageButton
                    android:id="@+id/stderrZoomOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="?selectableItemBackground"
                    app:srcCompat="@drawable/zoom_out_icon"
                    android:contentDescription="@string/zoom_out"
                    app:tint="@android:color/black"
                    app:backgroundTint="@android:color/holo_red_light"/>

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playground_exit_code_info"
            android:textSize="@dimen/small_text_size"
            android:layout_margin="@dimen/margin"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:background="@drawable/code_component_background">

            <HorizontalScrollView
                android:id="@+id/playgroundExitCodeScroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:fillViewport="true">

                <TextView
                    android:id="@+id/playgroundExitCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/playground_exit_code_hint"
                    android:textSize="@dimen/small_text_size"
                    android:textColor="@color/code_text_color"
                    android:textColorHint="@color/code_text_color"
                    android:background="@drawable/code_area_background"
                    android:padding="@dimen/padding" />

            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin"
                android:layout_below="@id/playgroundExitCodeScroll">

                <ImageButton
                    android:id="@+id/exitCodeZoomIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="?selectableItemBackground"
                    app:srcCompat="@drawable/zoom_in_icon"
                    android:contentDescription="@string/zoom_in"
                    android:layout_marginEnd="@dimen/margin" />

                <ImageButton
                    android:id="@+id/exitCodeZoomOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="?selectableItemBackground"
                    app:srcCompat="@drawable/zoom_out_icon"
                    android:contentDescription="@string/zoom_out" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>